--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
 			
 			<h4>Nos gustaría saber tu predicción en la siguiente encuesta. ¿Quién es tu ganador?<h4>
 			<button>Introduce tu ganador</button>
-			<script src="JAVA.js"></script>
+			<script src="java.js"></script>
 				<h5>Aquí un pequeño análisis de la pela</h5>
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/wCGvoQRk2BY?si=hoypnBruDjpw76gw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
